Test is added for quote doa with test container